--- a/src/index.css
+++ b/src/index.css
@@ -233,6 +233,17 @@
     @apply text-xs uppercase tracking-[0.3em] text-white/60;
   }
 
+  .masonry-gallery {
+    column-gap: 1rem;
+  }
+
+  .masonry-item {
+    break-inside: avoid;
+    margin-bottom: 1rem;
+    display: inline-block;
+    width: 100%;
+  }
+
   .scroll-reveal {
     animation: fade-in 1.1s ease-out both;
   }
